# Flow_analytics

./: .gitignore  CONTRIBUTING.md  README.md  animator.py  base_v2.ipynb  brussels_crosswalks.sh  brussels_june.xlsx  brussels_june_in.csv  brussels_lanes.sh  config.yaml  data_analysis.ipynb  demo_notebook.ipynb  environment.yaml  main.ipynb  main.py  object_identifier.py  oulu_crosswalks.sh  oulu_lanes.sh  plot_zones.py  plotter.py  postprocessing.ipynb  pyproject.toml  test_plotter.py
checks/: active_pipeline_checks.py  run_brussels_smoke_window.py  summarize_active_results.py
docs/: MDRAC_implementation.md  SPF.md  base_code.md
filters/: USAGE_EXAMPLE.py  __init__.py  ghost_filter.py  overlap_filter.py  teleportation_filter.py
irsm/: README.md  __init__.py  canonical_utils.py  compare_mdrac_irsm.py  configuration.yaml  data_generation.py  evaluator.py  irsm_config.yaml  irsm_plotter.py  risk_vector.py  supervised_detect.py  tune_mdrac.py  tune_unsupervised.py  unsupervised_tuning_results.yaml  visualize_risk.py
next_steps/: README.md  UPDATED_NEW_implementation_plan.md  UPDATED_brussels_validation_summary.md  UPDATED_issues_to_be_addressed.md  UPDATED_milestone_execution_status.md  accomplishments.md  agentic_assisted_work_prem.md  current_state.md  hardcoded_paths_list.md  implementation_plan.md  known_issues.md  mdrac_tuning_report.md  operational_runbook.md  repository_inventory.md  supervised_tuning_report.md  unsupervised_tuning_report.md
results/: mdrac_avg_conflicts.csv  mdrac_avg_conflicts_new.csv  mdrac_conflicts.csv  mdrac_conflicts2.csv  (+5 more)
(+303 files in other folders)
