[project]
name = "flow-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]
